# guardianconnector-change-detection

./: .env.example  .gitignore  Dockerfile  Dockerfile.tileserver  README.md  build.sh  docker-compose.yml  docker-generate.py  docker-tileserver-compile.py  example.geojson  example_t0.tif  example_t1.tif  finalize.py  generate.py  main.py  requirements.txt  run.sh  script.py
gccd_pkg/: README.md  pyproject.toml
gccd_pkg/gccd/: __init__.py  calculate_bbox.py  generate_fonts_sprites.py  generate_maps.py  generate_style.py  generate_tiles.py  serve_maps.py  test_calculate_bbox.py  utils.py
gccd_pkg/gccd/templates/: map.html  overlay_map.html  swipe_map.html
gccd_pkg/scripts/: main.py
gccd_pkg/templates/: style.json
httpservice/: Dockerfile  README.md  requirements.txt
httpservice/app/: app.py  security.py
scripts/: calculate_bbox.py  generate_fonts_sprites.py  generate_maps.py  generate_style.py  generate_tiles.py  serve_maps.py  utils.py
templates/: map.html  overlay_map.html  style.json
